crates/canopy/tests/snapshots/golden_snapshots__layer1_causative.snap
---
source: crates/canopy/tests/golden_snapshots.rs
expression: analysis
---
{
  "input": "Mary broke the vase",
  "layer1": [
    {
      "word": "Mary",
      "lemma": "mary",
      "pos": null,
      "has_verbnet": false,
      "has_framenet": false,
      "has_wordnet": false,
      "confidence": 0.0
    },
    {
      "word": "broke",
      "lemma": "break",
      "pos": null,
      "has_verbnet": true,
      "has_framenet": true,
      "has_wordnet": true,
      "confidence": 0.95
    },
    {
      "word": "the",
      "lemma": "the",
      "pos": null,
      "has_verbnet": false,
      "has_framenet": false,
      "has_wordnet": false,
      "confidence": 0.0
    },
    {
      "word": "vase",
      "lemma": "vase",
      "pos": null,
      "has_verbnet": false,
      "has_framenet": false,
      "has_wordnet": false,
      "confidence": 0.0
    }
  ],
  "layer2": null,
  "layer3": null
}
