crates/canopy/tests/snapshots/golden_snapshots__layer2_causative.snap
---
source: crates/canopy/tests/golden_snapshots.rs
expression: analysis
---
{
  "input": "Mary broke the vase",
  "layer1": [],
  "layer2": {
    "event_count": 1,
    "events": [
      {
        "predicate": "break",
        "little_v": "Do",
        "roles": [
          "Agent",
          "Patient"
        ]
      }
    ],
    "unbound_count": 0
  },
  "layer3": null
}
