crates/canopy/tests/snapshots/golden_snapshots__layer3_conditional.snap
---
source: crates/canopy/tests/golden_snapshots.rs
expression: analysis
---
{
  "input": "If it rains, the ground gets wet",
  "layer1": [],
  "layer2": null,
  "layer3": {
    "referent_count": 2,
    "condition_count": 0,
    "referent_types": {
      "Individual": 2
    },
    "condition_types": {}
  }
}
